# deep-learning

./: .gitignore  README.md  pyproject.toml  utils.py
00-perceptron/: README.md  model.py  train.py
01-mlp/: README.md  model.py  train.py
02-autoencoder/: README.md  autoencoder.py  train_autoencoder.py  train_word2vec.py  word2vec.py
03-cnn/: README.md  model.py  train.py
04-rnn/: README.md  model.py  train.py
