[project]
name = "deep-learning"
version = "0.1.0"
description = "Deep learning models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "torchvision>=0.21",
    "numpy>=2.0",
    "matplotlib>=3.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
